connection bdd depuis leaflet.js

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   </head>
   <body>
 
-    <form action="objects.php" method="post">
-      <div id="content">
-      </div>
+    <div id="map"></div>
+    <script src="leaflet.js"></script>
 
-</form>
+
+  </body>
 </html>
