--- a/index.html
+++ b/index.html
@@ -30,12 +30,16 @@
         <form id="form" action="objets.php" action="fin.php" method="POST">
             <label> User: <input type="text" name="pseudo" id="pseudo"></label>
             <button id="bouton" class="start">START!</button>
+
+<!-- Faire le tableau des scores -->
         </form>
           <ul>Records</ul>
-          <ul> user : </ul>
+          <ul>user : </ul>
           <ul>scores : </ul>
       </div>
+
     </div>
+
     <footer>
       <p>Tout droit réservé C</p>
       <p>Version 1.0</p>
