--- a/game.html
+++ b/game.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>Sarko's Escape Adventure</title>
-
     <link rel="apple-touch-icon" sizes="180x180" href="image/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="image/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="image/favicon-16x16.png">
@@ -17,7 +16,6 @@
       crossorigin=""></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
-
   <body>
 
     <header>
@@ -25,8 +23,18 @@
     </header>
 
     <div id="container">
-      <a class="button" type="button" href="game.html">PLAY</a>
-      <h2>Réussiez-vous à mettre en prison notre cher Sarko ?</h2>
+      <div id="map"></div>
+      <script src="leaflet.js"></script>
+
+      <div id ="scores">
+        <form id="form" action="objets.php" method="POST">
+            <label> User: <input type="text" name="pseudo" id="pseudo"></label>
+            <button id="bouton" class="start">START!</button>
+
+<!-- Faire le tableau des scores -->
+        <script src="scores.js"></script>
+      </div>
+
     </div>
 
     <footer>
