--- a/index.html
+++ b/index.html
@@ -22,8 +22,23 @@
       <h1> Sarko's Escape Adventure </h1>
     </header>
 
-    <div id="map"></div>
-    <script src="leaflet.js"></script>
+    <div id="map">
+      <div id="inventaire1">
+  bonjour
+      </div>
+    </div>
+
+
+
+
+    <div id="inventaire2">
+
+    </div>
+
+    <div id="inventaire3">
+
+    </div>
+
 
     <div id ="scores">
       <form id="form" action="objets.php" action="fin.php" method="POST">
@@ -39,5 +54,7 @@
       Tout droit réservé C
     </footer>
 
+  <script src="leaflet.js"></script>
+  
   </body>
 </html>
