la page d'accueil re fonctionne

--- a/index.html
+++ b/index.html
@@ -24,32 +24,9 @@
       <h1> Sarko's Escape Adventure </h1>
     </header>
 
-    <div id="map">
-      <div id="inventaire1">
-  bonjour
-      </div>
-    </div>
-
-
-
-
-    <div id="inventaire2">
-
-    </div>
-
-    <div id="inventaire3">
-
-    </div>
-
-
-    <div id ="scores">
-      <form id="form" action="objets.php" action="fin.php" method="POST">
-          <label> User: <input type="text" name="pseudo" id="pseudo"></label>
-          <button id="bouton" class="start">START!</button>
-      </form>
-        <ul>Records</ul>
-        <ul> user : </ul>
-        <ul>scores : </ul>
+    <div id="container">
+      <a class="button" type="button" href="game.html">PLAY</a>
+      <h2>Réussiez-vous à mettre en prison notre cher Sarko ?</h2>
     </div>
 
     <footer>
@@ -57,8 +34,6 @@
       <p>Version 1.0</p>
       <p>Dernière Maj : 16/11/2021 </p>
     </footer>
-
-  <script src="leaflet.js"></script>
 
   </body>
 </html>
