--- a/game.html
+++ b/game.html
@@ -26,6 +26,16 @@
       <div id="map"></div>
       <script src="leaflet.js"></script>
 
+      <div id="inventaire1">
+        bonjour
+      </div>
+
+      <div id="inventaire2">
+      </div>
+
+      <div id="inventaire3">
+      </div>
+
       <div id ="scores">
         <form id="form" action="objets.php" method="POST">
             <label> User: <input type="text" name="pseudo" id="pseudo"></label>
