bdd scores fonctionnelle git add .

--- a/game.html
+++ b/game.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Sarko's Escape Adventure</title>
+
     <link rel="apple-touch-icon" sizes="180x180" href="image/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="image/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="image/favicon-16x16.png">
@@ -42,6 +43,7 @@
             <button id="bouton" class="start">START!</button>
 
 <!-- Faire le tableau des scores -->
+        <div id="tab_score">
         <script src="scores.js"></script>
       </div>
 
