--- a/game.html
+++ b/game.html
@@ -27,14 +27,19 @@
       <div id="map"></div>
       <script src="leaflet.js"></script>
 
+      <div id="inventaire">
+
+
       <div id="inventaire1">
-        bonjour
+
       </div>
 
       <div id="inventaire2">
       </div>
 
       <div id="inventaire3">
+      </div>
+
       </div>
 
       <div id ="scores">
