--- a/game.html
+++ b/game.html
@@ -24,17 +24,8 @@
     </header>
 
     <div id="container">
-      <div id="map"></div>
-      <script src="leaflet.js"></script>
-
-      <div id="inventaire1">
-        bonjour
-      </div>
-
-      <div id="inventaire2">
-      </div>
-
-      <div id="inventaire3">
+      <div id="map">
+        <script src="leaflet.js"></script>
       </div>
 
       <div id ="scores">
@@ -48,6 +39,20 @@
         </div>
 
       </div>
+
+      <!-- <div id="inventaire" background="image/inventaire.PNG"> -->
+      <div id="inventaire">
+        <img src="image/inventaire.PNG">
+
+        <div id="inventaire1"></div>
+        <div id="inventaire2"></div>
+        <div id="inventaire3"></div>
+        <div id="inventaire4"></div>
+        <div id="inventaire5"></div>
+        <div id="inventaire6"></div>
+        <div id="inventaire7"></div>
+      </div>
+
     </div>
 
     <footer>
