--- a/game.html
+++ b/game.html
@@ -28,8 +28,6 @@
         <script src="leaflet.js"></script>
       </div>
 
-      </div>
-
       <div id ="scores">
         <form id="form" action="objets.php" method="POST">
             <label> User: <input type="text" name="pseudo" id="pseudo"></label>
@@ -47,7 +45,9 @@
         <img src="image/inventaire.PNG">
 
         <div id="inventaire1"></div>
+          <img src="image/parfum.png">
         <div id="inventaire2"></div>
+          <img src="image/parfum.png">
         <div id="inventaire3"></div>
         <div id="inventaire4"></div>
         <div id="inventaire5"></div>
