--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <h1> Sarko's Escape Adventure </h1>
     </header>
 
-    <div id="container">
+    <div id="containerStart">
       <a class="button" type="button" href="game.html">PLAY</a>
       <h2>Réussiez-vous à mettre en prison notre cher Sarko ?</h2>
     </div>
