--- a/game.html
+++ b/game.html
@@ -42,17 +42,24 @@
 
       <!-- <div id="inventaire" background="image/inventaire.PNG"> -->
       <div id="inventaire">
-        <img src="image/inventaire.PNG">
+        <!-- <img src="image/inventaire.PNG"> -->
 
-        <div id="inventaire1"></div>
-          <img src="image/parfum.png">
-        <div id="inventaire2"></div>
-          <img src="image/parfum.png">
-        <div id="inventaire3"></div>
-        <div id="inventaire4"></div>
-        <div id="inventaire5"></div>
-        <div id="inventaire6"></div>
-        <div id="inventaire7"></div>
+        <div id="inventaire1">
+          <img src="image/icon_carte_presse.png">
+        </div>
+
+        <div id="inventaire2">
+          <img src="image/icon_parfum.png">
+        </div>
+
+        <div id="inventaire3">
+          <img src="image/inventaire_vide.png">
+        </div>
+
+        <div id="inventaire4"><img src="image/inventaire_vide.png"></div>
+        <div id="inventaire5"><img src="image/inventaire_vide.png"></div>
+        <div id="inventaire6"><img src="image/inventaire_vide.png"></div>
+        <div id="inventaire7"><img src="image/inventaire_vide.png"></div>
       </div>
 
     </div>
