ajout bandeau + construction js

--- a/game.html
+++ b/game.html
@@ -20,7 +20,18 @@
   <body>
 
     <header>
+      <div id="bandeau">
+        <ul id="menu">
+          <li class="deroulant"><a href="http://www.localhost/">Recommencer</a></li>
+          <li class="deroulant"><a href="#">Solution</a></li>
+          <li class="deroulant"><a href="#">A propos</a></li>
+          <li class="deroulant"><a href="#">Scores</a></li>
+        </ul>
+      </div>
+
+
       <h1> Sarko's Escape Adventure </h1>
+
     </header>
 
     <div id="container">
