--- a/index.html
+++ b/index.html
@@ -21,11 +21,21 @@
   <body>
 
     <header>
+      <div id="bandeau">
+        <ul id="menu">
+          <li class="deroulant"><a href="http://www.localhost/">Recommencer</a></li>
+          <li class="deroulant"><a href="#">Solution</a></li>
+          <li class="deroulant"><a href="#">A propos</a></li>
+          <li class="deroulant"><a href="#">Scores</a></li>
+        </ul>
+      </div>
       <h1> Sarko's Escape Adventure </h1>
     </header>
 
     <div id="containerStart">
-      <a class="button" type="button" href="game.html">PLAY</a>
+      <a class="button" type="button" href="game.html">PLAY
+        <!-- Rest la BDD objets + reset les pseudos avec aucun score d'enregistré (c'est les joueurs qui n'ont pas terminé leur partie) -->
+      </a>
       <h2>Réussiez-vous à mettre en prison notre cher Sarko ?</h2>
     </div>
 
