--- a/game.html
+++ b/game.html
@@ -55,22 +55,13 @@
       <div id="inventaire">
         <!-- <img src="image/inventaire.PNG"> -->
 
-        <div id="inventaire1">
-          <img src="image/icon_carte_presse.png">
-        </div>
-
-        <div id="inventaire2">
-          <img src="image/icon_parfum.png">
-        </div>
-
-        <div id="inventaire3">
-          <img src="image/inventaire_vide.png">
-        </div>
-
-        <div id="inventaire4"><img src="image/inventaire_vide.png"></div>
-        <div id="inventaire5"><img src="image/inventaire_vide.png"></div>
-        <div id="inventaire6"><img src="image/inventaire_vide.png"></div>
-        <div id="inventaire7"><img src="image/inventaire_vide.png"></div>
+        <div id="inventaire1"><img id="invA" src="image/icons/icon_carte_presse.png"></div>
+        <div id="inventaire2"><img id="invB" src="image/icons/icon_parfum.png"></div>
+        <div id="invC" id="inventaire3"><img src="image/icons/icon_vide.png"></div>
+        <div id="inventaire4"><img src="image/icons/icon_vide.png"></div>
+        <div id="inventaire5"><img src="image/icons/icon_vide.png"></div>
+        <div id="inventaire6"><img src="image/icons/icon_vide.png"></div>
+        <div id="inventaire7"><img src="image/icons/icon_vide.png"></div>
       </div>
 
     </div>
