ajout pages html menus MAIS le centrage du bouton play est cassé :/

--- a/index.html
+++ b/index.html
@@ -24,19 +24,21 @@
       <div id="bandeau">
         <ul id="menu">
           <li class="deroulant"><a href="http://www.localhost/">Recommencer</a></li>
-          <li class="deroulant"><a href="#">Solution</a></li>
-          <li class="deroulant"><a href="#">A propos</a></li>
-          <li class="deroulant"><a href="#">Scores</a></li>
+          <li class="deroulant"><a href="http://www.localhost/solution.html" target="_blank" rel="noopener noreferrer">Solution</a></li>
+          <li class="deroulant"><a href="http://www.localhost/apropos.html">A propos</a></li>
+          <li class="deroulant"><a href="http://www.localhost/scores.html">Scores</a></li>
         </ul>
       </div>
       <h1> Sarko's Escape Adventure </h1>
     </header>
 
-    <div id="containerStart">
-      <a class="button" type="button" href="game.html">PLAY
-        <!-- Rest la BDD objets + reset les pseudos avec aucun score d'enregistré (c'est les joueurs qui n'ont pas terminé leur partie) -->
-      </a>
-      <h2>Réussiez-vous à mettre en prison notre cher Sarko ?</h2>
+    <div id="container">
+      <div id="containerStart">
+        <a class="button" type="button" href="game.html">PLAY
+          <!-- Rest la BDD objets + reset les pseudos avec aucun score d'enregistré (c'est les joueurs qui n'ont pas terminé leur partie) -->
+        </a>
+        <h2>Réussiez-vous à mettre en prison notre cher Sarko ?</h2>
+      </div>
     </div>
 
     <footer>
