--- a/game.html
+++ b/game.html
@@ -39,12 +39,7 @@
         <script src="leaflet.js"></script>
       </div>
 
-      <div id ="scores">
-        <form id="form" action="objets.php" method="POST">
-            <label> User: <input type="text" name="pseudo" id="pseudo"></label>
-            <button id="bouton" class="start">START!</button>
-
-<!-- Faire le tableau des scores -->
+      <div id ="bestScores">
         <div id="tab_score">
         <script src="scores.js"></script>
         </div>
