--- a/scores.html
+++ b/scores.html
@@ -33,6 +33,9 @@
     </header>
 
     <div id="container">
+      <div id="tab_score">
+      <script src="scores.js"></script>
+      </div>
     </div>
 
 
