--- a/apropos.html
+++ b/apropos.html
@@ -33,6 +33,8 @@
     </header>
 
     <div id="container">
+
+      Ceci est un jeu qui a été fait dans le cadre d'un projet informatique de l'école ENSG. 
     </div>
 
 
