--- a/apropos.html
+++ b/apropos.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title>Sarko's Escape Adventure</title>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="image/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="image/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="image/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="image/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="image/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="image/favicon/favicon-16x16.png">
     <link rel="manifest" href="image/site.webmanifest">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
@@ -34,7 +34,7 @@
 
     <div id="container">
 
-      Ceci est un jeu qui a été fait dans le cadre d'un projet informatique de l'école ENSG. 
+      Ceci est un jeu qui a été fait dans le cadre d'un projet informatique de l'école ENSG.
     </div>
 
 
