--- a/game.html
+++ b/game.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title>Sarko's Escape Adventure</title>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="image/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="image/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="image/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="image/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="image/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="image/favicon/favicon-16x16.png">
     <link rel="manifest" href="image/site.webmanifest">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
@@ -18,20 +18,21 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 
-    
+
   </head>
   <body>
 
     <header>
+      <!-- <img id="logo" src="image/sea_logo4.png"> -->
       <div id="bandeau">
         <ul id="menu">
-          <li class="deroulant"><a href="http://www.localhost/">Recommencer</a></li>
-          <li class="deroulant"><a href="http://www.localhost/solution.html" target="_blank" rel="noopener noreferrer">Solution</a></li>
-          <li class="deroulant"><a href="http://www.localhost/apropos.html">A propos</a></li>
-          <li class="deroulant"><a href="http://www.localhost/scores.html">Scores</a></li>
+          <!-- <li><img id="logo" src="image/sea_logo.png"></li> -->
+          <li><a href="http://www.localhost/">Recommencer</a></li>
+          <li><a href="http://www.localhost/solution.html" target="_blank" rel="noopener noreferrer">Solution</a></li>
+          <li><a href="http://www.localhost/apropos.html">A propos</a></li>
+          <li><a href="http://www.localhost/scores.html">Scores</a></li>
         </ul>
       </div>
-
 
       <h1> Sarko's Escape Adventure </h1>
 
