bandeau menu + lettre

--- a/game.html
+++ b/game.html
@@ -23,14 +23,16 @@
   <body>
 
     <header>
-      <!-- <img id="logo" src="image/sea_logo4.png"> -->
+      <!-- <img id="logo" src="image/sea_logo5.png"> -->
       <div id="bandeau">
         <ul id="menu">
-          <!-- <li><img id="logo" src="image/sea_logo.png"></li> -->
+          <li>
+            <img src="image/sea_logo6.png">
+          </li>
           <li><a href="http://www.localhost/">Recommencer</a></li>
-          <li><a href="http://www.localhost/solution.html" target="_blank" rel="noopener noreferrer">Solution</a></li>
-          <li><a href="http://www.localhost/apropos.html">A propos</a></li>
-          <li><a href="http://www.localhost/scores.html">Scores</a></li>
+          <li><a href="/solution.html" target="_blank" rel="noopener noreferrer">Solution</a></li>
+          <li><a href="/scores.html">Scores</a></li>
+          <li style="float:right"><a href="apropos.html">À propos</a></li>
         </ul>
       </div>
 
@@ -50,13 +52,10 @@
 
       </div>
 
-      <!-- <div id="inventaire" background="image/inventaire.PNG"> -->
       <div id="inventaire">
-        <!-- <img src="image/inventaire.PNG"> -->
-
-        <div id="inventaire1"><img id="invA" src="image/icons/icon_carte_presse.png"></div>
-        <div id="inventaire2"><img id="invB" src="image/icons/icon_parfum.png"></div>
-        <div id="invC" id="inventaire3"><img src="image/icons/icon_vide.png"></div>
+        <div id="inventaire1"><img src="image/icons/icon_carte_presse.png"></div>
+        <div id="inventaire2"><img src="image/icons/icon_parfum.png"></div>
+        <div id="inventaire3"><img src="image/icons/icon_vide.png"></div>
         <div id="inventaire4"><img src="image/icons/icon_vide.png"></div>
         <div id="inventaire5"><img src="image/icons/icon_vide.png"></div>
         <div id="inventaire6"><img src="image/icons/icon_vide.png"></div>
