--- a/apropos.html
+++ b/apropos.html
@@ -16,6 +16,9 @@
       integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
       crossorigin=""></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <!-- <link rel="stylesheet" href="./style_contact.css"> -->
   </head>
 
   <body>
@@ -23,19 +26,43 @@
     <header>
       <div id="bandeau">
         <ul id="menu">
-          <li class="deroulant"><a href="http://www.localhost/">Recommencer</a></li>
-          <li class="deroulant"><a href="http://www.localhost/solution.html" target="_blank" rel="noopener noreferrer">Solution</a></li>
-          <li class="deroulant"><a href="http://www.localhost/apropos.html">A propos</a></li>
-          <li class="deroulant"><a href="http://www.localhost/scores.html">Scores</a></li>
+          <li>
+            <img src="image/sea_logo6.png">
+          </li>
+          <li><a href="http://www.localhost/">Recommencer</a></li>
+          <li><a href="/solution.html" target="_blank" rel="noopener noreferrer">Solution</a></li>
+          <li><a href="/scores.html">Scores</a></li>
+          <li style="float:right"><a class="active" href="apropos.html">À propos</a></li>
         </ul>
       </div>
+
       <h1> Sarko's Escape Adventure </h1>
     </header>
 
     <div id="container">
 
       Ceci est un jeu qui a été fait dans le cadre d'un projet informatique de l'école ENSG.
-    </div>
+
+      <div class="contact">
+        <article class="letter">
+          <div class="side">
+            <h1>Contact us</h1>
+            <p><textarea placeholder="Your message"></textarea></p>
+          </div>
+          <div class="side">
+            <p><input type="text" placeholder="Your name" ></p>
+            <p><input type="email" placeholder="Your email" ></p>
+            <p><button id="sendLetter">Send</button></p>
+          </div>
+        </article>
+        <div class="envelope front"></div>
+        <div class="envelope back"></div>
+      </div>
+      <p class="result-message">Thank you for your message</p>
+      </div>
+        <script  src="./script_contact.js"></script>
+
+
 
 
     <footer>
