--- a/scores.html
+++ b/scores.html
@@ -23,12 +23,17 @@
     <header>
       <div id="bandeau">
         <ul id="menu">
-          <li class="deroulant"><a href="http://www.localhost/">Recommencer</a></li>
-          <li class="deroulant"><a href="http://www.localhost/solution.html" target="_blank" rel="noopener noreferrer">Solution</a></li>
-          <li class="deroulant"><a href="http://www.localhost/apropos.html">A propos</a></li>
-          <li class="deroulant"><a href="http://www.localhost/scores.html">Scores</a></li>
+          <li>
+            <!-- <div id="logo"><img src="image/sea_logo5.png"></div> -->
+            <img src="image/sea_logo6.png">
+          </li>
+          <li><a href="http://www.localhost/">Recommencer</a></li>
+          <li><a href="/solution.html" target="_blank" rel="noopener noreferrer">Solution</a></li>
+          <li><a class="active" href="/scores.html">Scores</a></li>
+          <li style="float:right"><a href="apropos.html">À propos</a></li>
         </ul>
       </div>
+
       <h1> Sarko's Escape Adventure </h1>
     </header>
 
