--- a/jeu.html
+++ b/jeu.html
@@ -26,10 +26,8 @@
       <!-- <img id="logo" src="image/sea_logo5.png"> -->
       <div id="bandeau">
         <ul id="menu">
-          <li>
-            <img src="image/sea_logo6.png">
-          </li>
-          <li><a href="http://www.localhost/">Recommencer</a></li>
+          <li><img src="image/sea_logo.png"></li>
+          <li><a href="http://www.localhost/">Accueil</a></li>
           <li><a href="/solution.html" target="_blank" rel="noopener noreferrer">Solution</a></li>
           <li><a href="/scores.html">Scores</a></li>
           <li style="float:right"><a href="apropos.html">À propos</a></li>
@@ -43,6 +41,10 @@
     <div id="container">
       <div id="map">
         <script src="leaflet.js"></script>
+      </div>
+
+      <div id="carnet">
+        <img src="image/carnet.png">
       </div>
 
       <div id ="bestScores">
