--- a/solution.html
+++ b/solution.html
@@ -23,10 +23,8 @@
     <header>
       <div id="bandeau">
         <ul id="menu">
-          <li>
-            <img src="image/sea_logo6.png">
-          </li>
-          <li><a href="http://www.localhost/">Recommencer</a></li>
+          <li><img src="image/sea_logo.png"></li>
+          <li><a href="http://www.localhost/">Accueil</a></li>
           <li><a class="active" href="/solution.html" target="_blank" rel="noopener noreferrer">Solution</a></li>
           <li><a href="/scores.html">Scores</a></li>
           <li style="float:right"><a href="apropos.html">À propos</a></li>
