--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
     <header>
       <div id="bandeau">
         <ul id="menu">
-          <li>
-            <img src="image/sea_logo6.png">
-          </li>
-          <li><a class="active" href="http://www.localhost/">Recommencer</a></li>
+          <li><img src="image/sea_logo.png"></li>
+          <li><a class="active" href="http://www.localhost/">Accueil</a></li>
           <li><a href="/solution.html" target="_blank" rel="noopener noreferrer">Solution</a></li>
           <li><a href="/scores.html">Scores</a></li>
           <li style="float:right"><a href="apropos.html">À propos</a></li>
@@ -41,7 +39,7 @@
           <label> User: <input type="text" name="pseudo" id="pseudo"></label>
           <!-- <button id="bouton" class="start">START!</button> -->
         </form>
-      <a class="button" type="button" href="game.html">PLAY
+      <a class="button" type="button" href="jeu.html">JOUER
         <!-- Rest la BDD objets + reset les pseudos avec aucun score d'enregistré (c'est les joueurs qui n'ont pas terminé leur partie) -->
       </a>
       <h2>Réussiez-vous à mettre en prison notre cher Sarko ?</h2>
