correction ajout d'images à l'inventaire

--- a/jeu.html
+++ b/jeu.html
@@ -55,13 +55,13 @@
       </div>
 
       <div id="inventaire">
-        <div id="inventaire1"><img src="image/icons/icon_carte_presse.png"></div>
-        <div id="inventaire2"><img src="image/icons/icon_parfum.png"></div>
-        <div id="inventaire3"><img src="image/icons/icon_vide.png"></div>
-        <div id="inventaire4"><img src="image/icons/icon_vide.png"></div>
-        <div id="inventaire5"><img src="image/icons/icon_vide.png"></div>
-        <div id="inventaire6"><img src="image/icons/icon_vide.png"></div>
-        <div id="inventaire7"><img src="image/icons/icon_vide.png"></div>
+        <div id="inventaire1"><img id="invA" src="image/icons/icon_carte_presse.png"></div>
+        <div id="inventaire2"><img id="invB" src="image/icons/icon_parfum.png"></div>
+        <div id="inventaire3"><img id="invC" src="image/icons/icon_vide.png"></div>
+        <div id="inventaire5"><img id="invD" src="image/icons/icon_vide.png"></div>
+        <div id="inventaire4"><img id="invE" src="image/icons/icon_vide.png"></div>
+        <div id="inventaire6"><img id="invF" src="image/icons/icon_vide.png"></div>
+        <div id="inventaire7"><img id="invG" src="image/icons/icon_vide.png"></div>
       </div>
 
     </div>
