--- a/jeu.html
+++ b/jeu.html
@@ -39,6 +39,13 @@
     </header>
 
     <div id="container">
+
+      <form id="telephone">
+        <input type="tel" placeholder="06 01 02 03 04" pattern="[0-9]{2} [0-9]{2} [0-9]{2} [0-9]{2} [0-9]{2}" required>
+
+        <input type="submit" value="Téléphoner">
+      </form>
+      
       <div id="map">
         <script src="leaflet.js"></script>
       </div>
@@ -63,6 +70,10 @@
         <div id="inventaire6"><img id="invF" src="image/icons/icon_vide.png"></div>
         <div id="inventaire7"><img id="invG" src="image/icons/icon_vide.png"></div>
       </div>
+
+
+
+
 
     </div>
 
