fin des images + audio test

--- a/jeu.html
+++ b/jeu.html
@@ -45,7 +45,7 @@
 
         <input type="submit" value="Téléphoner">
       </form>
-      
+
       <div id="map">
         <script src="leaflet.js"></script>
       </div>
@@ -69,6 +69,16 @@
         <div id="inventaire4"><img id="invE" src="image/icons/icon_vide.png"></div>
         <div id="inventaire6"><img id="invF" src="image/icons/icon_vide.png"></div>
         <div id="inventaire7"><img id="invG" src="image/icons/icon_vide.png"></div>
+      </div>
+
+
+      <div id="player">
+        <audio id="recupObjet">
+        <source src="son/s1.mp3" type="audio/mpeg">
+        </audio>
+        <audio id="oui" controls hidden>
+        <source src="son/s1.mp3" type="audio/mpeg">
+        </audio>
       </div>
 
 
