--- a/jeu.html
+++ b/jeu.html
@@ -42,17 +42,11 @@
 
       <form id="telephone">
         <input type="tel" placeholder="06 01 02 03 04" pattern="[0-9]{2} [0-9]{2} [0-9]{2} [0-9]{2} [0-9]{2}" required>
-
         <input type="submit" value="Téléphoner">
       </form>
 
-      <div id="map">
-        <script src="leaflet.js"></script>
-      </div>
-
-      <div id="carnet">
-        <img src="image/carnet.png">
-      </div>
+      <div id="map"><script src="leaflet.js"></script></div>
+      <div id="carnet"><img src="image/carnet.png"></div>
 
       <div id ="bestScores">
         <div id="tab_score">
@@ -62,23 +56,19 @@
       </div>
 
       <div id="inventaire">
-        <div id="inventaire1"><img id="invA" src="image/icons/icon_carte_presse.png"></div>
-        <div id="inventaire2"><img id="invB" src="image/icons/icon_parfum.png"></div>
-        <div id="inventaire3"><img id="invC" src="image/icons/icon_vide.png"></div>
-        <div id="inventaire5"><img id="invD" src="image/icons/icon_vide.png"></div>
-        <div id="inventaire4"><img id="invE" src="image/icons/icon_vide.png"></div>
-        <div id="inventaire6"><img id="invF" src="image/icons/icon_vide.png"></div>
-        <div id="inventaire7"><img id="invG" src="image/icons/icon_vide.png"></div>
+        <div id="inventaire1"><img id="inv1" src="image/icons/icon_carte_presse.png"></div>
+        <div id="inventaire2"><img id="inv2" src="image/icons/icon_parfum.png"></div>
+        <div id="inventaire3"><img id="inv3" src="image/icons/icon_vide.png"></div>
+        <div id="inventaire5"><img id="inv4" src="image/icons/icon_vide.png"></div>
+        <div id="inventaire4"><img id="inv5" src="image/icons/icon_vide.png"></div>
+        <div id="inventaire6"><img id="inv6" src="image/icons/icon_vide.png"></div>
+        <div id="inventaire7"><img id="inv7" src="image/icons/icon_vide.png"></div>
       </div>
 
 
-      <div id="player">
-        <audio id="recupObjet">
-        <source src="son/s1.mp3" type="audio/mpeg">
-        </audio>
-        <audio id="oui" controls hidden>
-        <source src="son/s1.mp3" type="audio/mpeg">
-        </audio>
+      <div>
+        <audio id="recupObjet"><source src="son/s1.wav" type="audio/mpeg"></audio>
+        <audio id="oui" controls hidden><source src="son/s1.mp3" type="audio/mpeg"></audio>
       </div>
 
 
