--- a/index.html
+++ b/index.html
@@ -22,19 +22,20 @@
       <h1> Sarko's Escape Adventure </h1>
     </header>
 
-    <div id="map"></div>
-    <script src="leaflet.js"></script>
+    <div id="container">
+      <div id="map"></div>
+      <script src="leaflet.js"></script>
 
-    <div id ="scores">
-      <form id="form" action="objets.php" action="fin.php" method="POST">
-          <label> User: <input type="text" name="pseudo" id="pseudo"></label>
-          <button id="bouton" class="start">START!</button>
-      </form>
-        <ul>Records</ul>
-        <ul> user : </ul>
-        <ul>scores : </ul>
+      <div id ="scores">
+        <form id="form" action="objets.php" action="fin.php" method="POST">
+            <label> User: <input type="text" name="pseudo" id="pseudo"></label>
+            <button id="bouton" class="start">START!</button>
+        </form>
+          <ul>Records</ul>
+          <ul> user : </ul>
+          <ul>scores : </ul>
+      </div>
     </div>
-
     <footer>
       Tout droit réservé C
     </footer>
