--- a/jeu.html
+++ b/jeu.html
@@ -40,9 +40,9 @@
 
     <div id="container">
 
-      <form id="telephone">
-        <input type="tel" placeholder="06 01 02 03 04" pattern="[0-9]{2} [0-9]{2} [0-9]{2} [0-9]{2} [0-9]{2}" required>
-        <input type="submit" value="Téléphoner">
+      <form onsubmit="return false">
+        <input type="tel" id="telephone" placeholder="06 01 02 03 04" pattern="[0-9]{2} [0-9]{2} [0-9]{2} [0-9]{2} [0-9]{2}" required>
+        <input id="boutonTel" type="submit" value="Téléphoner">
       </form>
 
       <div id="map"><script src="leaflet.js"></script></div>
