ajout popup qui marche pas bien

--- a/jeu.html
+++ b/jeu.html
@@ -66,6 +66,14 @@
       </div>
 
 
+      <div class="popup centered">
+        <h1>Appel</h1>
+        <div id="popupTel"><img src="image/nokia.png"></div>
+        <p>blablablablabla</p>
+        <p><button id="sendLetter">OK</button></p>
+      </div>
+      <script src="/script_contact.js"></script>
+
       <div>
         <audio id="recupObjet"><source src="son/s1.wav" type="audio/mpeg"></audio>
         <audio id="oui" controls hidden><source src="son/s1.mp3" type="audio/mpeg"></audio>
