--- a/jeu.html
+++ b/jeu.html
@@ -56,9 +56,9 @@
       </div>
 
       <div id="inventaire">
-        <div id="inventaire1"><img id="inv1" src="image/icons/icon_carte_presse.png"></div>
+        <div id="inventaire1"><img id="inv1" src="image/icons/icon_clef_bnp.png"></div>
         <div id="inventaire2"><img id="inv2" src="image/icons/icon_parfum.png"></div>
-        <div id="inventaire3"><img id="inv3" src="image/icons/icon_vide.png"></div>
+        <div id="inventaire3"><img id="inv3" src="image/icons/icon_carte_presse.png"></div>
         <div id="inventaire5"><img id="inv4" src="image/icons/icon_vide.png"></div>
         <div id="inventaire4"><img id="inv5" src="image/icons/icon_vide.png"></div>
         <div id="inventaire6"><img id="inv6" src="image/icons/icon_vide.png"></div>
@@ -68,7 +68,7 @@
 
       <div>
         <audio id="recupObjet"><source src="son/s1.wav" type="audio/mpeg"></audio>
-        <audio id="oui" controls hidden><source src="son/s1.mp3" type="audio/mpeg"></audio>
+        <audio id="bar"><source src="son/s1.mp3" type="audio/mpeg"></audio>
       </div>
 
 
