--- a/jeu.html
+++ b/jeu.html
@@ -7,7 +7,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="image/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="image/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="image/favicon/favicon-16x16.png">
-    <link rel="manifest" href="image/site.webmanifest">
+    <link rel="manifest" href="image/favicon/site.webmanifest">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
       integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
@@ -69,7 +69,7 @@
       <div class="popup centered">
         <h1>Appel</h1>
         <div id="popupTel"><img src="image/nokia.png"></div>
-        <p>blablablablabla</p>
+        <p id="infoTel"></p>
         <p><button id="sendLetter">OK</button></p>
       </div>
       <script src="/script_contact.js"></script>
