tests avec inventaire

--- a/jeu.html
+++ b/jeu.html
@@ -56,7 +56,7 @@
       </div>
 
       <div id="inventaire">
-        <div id="inventaire1"><img id="inv1" src="image/icons/icon_clef_bnp.png"></div>
+        <div id="inventaire1"><img id="inv1" src="image/icons/icon_nokia.png"></div>
         <div id="inventaire2"><img id="inv2" src="image/icons/icon_parfum.png"></div>
         <div id="inventaire3"><img id="inv3" src="image/icons/icon_carte_presse.png"></div>
         <div id="inventaire5"><img id="inv4" src="image/icons/icon_vide.png"></div>
