--- a/jeu.html
+++ b/jeu.html
@@ -65,10 +65,19 @@
         <div id="inventaire7"><img id="inv7" src="image/icons/icon_vide.png"></div>
       </div>
 
+      <div class="popup changementAffaire">
+        <h1>Changement affaire</h1>
+        <div id="popupAffaire"><img src="image/nokia.png"></div>
+        <p id="infoAffaire"></p>
+        <p><button id="sendAffaire">OK</button></p>
+      </div>
+
+
+
 
       <div class="popup centered">
         <h1>Appel</h1>
-        <div id="popupTel"><img src="image/nokia.png"></div>
+        <div id="popupTel"></div>
         <p id="infoTel"></p>
         <p><button id="sendLetter">OK</button></p>
       </div>
