--- a/jeu.html
+++ b/jeu.html
@@ -46,19 +46,21 @@
       </form>
 
       <div id="map"><script src="leaflet.js"></script></div>
-      <div id="carnet"><img src="image/carnet.png"></div>
+      <div id="carnet">
+        <img src="image/carnet.png">
+        <div id="info"><p>Adresse de george pompidou : bru aoifj ezifegr zgqerguu uufuf i</textarea></p></div>
+      </div>
 
       <div id ="bestScores">
         <div id="tab_score">
         <script src="scores.js"></script>
         </div>
-
       </div>
 
       <div id="inventaire">
         <div id="inventaire1"><img id="inv1" src="image/icons/icon_nokia.png"></div>
-        <div id="inventaire2"><img id="inv2" src="image/icons/icon_parfum.png"></div>
-        <div id="inventaire3"><img id="inv3" src="image/icons/icon_carte_presse.png"></div>
+        <div id="inventaire2"><img id="inv2" src="image/icons/icon_vide.png"></div>
+        <div id="inventaire3"><img id="inv3" src="image/icons/icon_vide.png"></div>
         <div id="inventaire5"><img id="inv4" src="image/icons/icon_vide.png"></div>
         <div id="inventaire4"><img id="inv5" src="image/icons/icon_vide.png"></div>
         <div id="inventaire6"><img id="inv6" src="image/icons/icon_vide.png"></div>
