--- a/jeu.html
+++ b/jeu.html
@@ -48,7 +48,8 @@
       <div id="map"><script src="leaflet.js"></script></div>
       <div id="carnet">
         <img src="image/carnet.png">
-        <div id="info"><p>Adresse de george pompidou : bru aoifj ezifegr zgqerguu uufuf i</textarea></p></div>
+        <div id="info">Adresse de george pompidou : bru aoifj ezifegr zgqerguu uufuf i</div>
+        <div id="indice">INDICE</div>
       </div>
 
       <div id ="bestScores">
