--- a/fin.html
+++ b/fin.html
@@ -36,7 +36,7 @@
 
     <div id="container">
 
-      <p> Grâce à toi Sarkosy est condamné à X mois d'emprisonnement, ecxellent travail !</p>
+      <p> Grâce à toi Sarkozy est condamné à X mois d'emprisonnement, exellent travail !</p>
       <div id="imageFin">
         <img src="image/fin.png">
       </div>
