--- a/jeu.html
+++ b/jeu.html
@@ -40,12 +40,8 @@
 
     <div id="container">
 
-      <form onsubmit="return false">
-        <input type="tel" id="telephone" placeholder="06 01 02 03 04" pattern="[0-9]{2} [0-9]{2} [0-9]{2} [0-9]{2} [0-9]{2}" required>
-        <input id="boutonTel" type="submit" value="Téléphoner">
-      </form>
 
-      <div id="map"><script src="leaflet.js"></script></div>
+      <div id="map"></div>
       <div id="carnet"><img src="image/carnet.png"></div>
 
       <div id ="bestScores">
@@ -57,17 +53,17 @@
 
       <div id="inventaire">
         <div id="inventaire1"><img id="inv1" src="image/icons/icon_nokia.png"></div>
-        <div id="inventaire2"><img id="inv2" src="image/icons/icon_parfum.png"></div>
-        <div id="inventaire3"><img id="inv3" src="image/icons/icon_carte_presse.png"></div>
+        <div id="inventaire2"><img id="inv2" src="image/icons/icon_vide.png"></div>
+        <div id="inventaire3"><img id="inv3" src="image/icons/icon_vide.png"></div>
         <div id="inventaire5"><img id="inv4" src="image/icons/icon_vide.png"></div>
         <div id="inventaire4"><img id="inv5" src="image/icons/icon_vide.png"></div>
         <div id="inventaire6"><img id="inv6" src="image/icons/icon_vide.png"></div>
         <div id="inventaire7"><img id="inv7" src="image/icons/icon_vide.png"></div>
       </div>
 
-      <div class="popup changementAffaire">
+      <div class="popup affaire">
         <h1>Changement affaire</h1>
-        <div id="popupAffaire"><img src="image/nokia.png"></div>
+        <div id="popupAffaire"></div>
         <p id="infoAffaire"></p>
         <p><button id="sendAffaire">OK</button></p>
       </div>
@@ -79,6 +75,12 @@
         <h1>Appel</h1>
         <div id="popupTel"></div>
         <p id="infoTel"></p>
+
+        <form onsubmit="return false">
+          <input type="tel" id="telephone" placeholder="06 01 02 03 04" pattern="[0-9]{2} [0-9]{2} [0-9]{2} [0-9]{2} [0-9]{2}" required>
+          <input id="boutonTel" type="submit" value="Téléphoner">
+        </form>
+
         <p><button id="sendLetter">OK</button></p>
       </div>
       <script src="/script_contact.js"></script>
@@ -89,7 +91,7 @@
       </div>
 
 
-
+<script src="leaflet.js"></script>
 
 
     </div>
