--- a/jeu.html
+++ b/jeu.html
@@ -41,7 +41,7 @@
     <div id="container">
 
 
-      <div id="map"><script src="leaflet.js"></script></div>
+      <div id="map"></div>
       <div id="carnet">
         <img src="image/carnet.png">
         <div id="info">Adresse de george pompidou : bru aoifj ezifegr zgqerguu uufuf i</div>
