la popup fonctionne

--- a/jeu.html
+++ b/jeu.html
@@ -75,17 +75,16 @@
 
       <div class="popup centered">
         <h1>Appel</h1>
-        <div id="popupTel"></div>
-        <p id="infoTel"></p>
-
+        <!-- <div id="popupTel"></div> -->
         <form onsubmit="return false">
           <input type="tel" id="telephone" placeholder="06 01 02 03 04" pattern="[0-9]{2} [0-9]{2} [0-9]{2} [0-9]{2} [0-9]{2}" required>
           <input id="boutonTel" type="submit" value="Téléphoner">
         </form>
+        <p id="infoTel">BONJOZUGPOUZG ZEUOGN Efizoeng zgn qzgnp uqnepu npzugn pqegegergugiriu zuig uiuzig urg iuregiu irug i</p>
 
-        <p><button id="sendLetter">OK</button></p>
+
+        <p><button id="fin_appel">OK</button></p>
       </div>
-      <script src="/script_contact.js"></script>
 
       <div>
         <audio id="recupObjet"><source src="son/s1.wav" type="audio/mpeg"></audio>
