--- a/jeu.html
+++ b/jeu.html
@@ -75,7 +75,7 @@
 
       <div class="popup centered">
         <h1>Appel</h1>
-        <!-- <div id="popupTel"></div> -->
+        <div id="imageTel"><img src="image/nokia.png"></div>
         <form onsubmit="return false">
           <input type="tel" id="telephone" placeholder="06 01 02 03 04" pattern="[0-9]{2} [0-9]{2} [0-9]{2} [0-9]{2} [0-9]{2}" required>
           <input id="boutonTel" type="submit" value="Téléphoner">
