tableau des scores ok

--- a/jeu.html
+++ b/jeu.html
@@ -49,9 +49,7 @@
       </div>
 
       <div id ="bestScores">
-        <div id="tab_score">
-        <script src="scores.js"></script>
-        </div>
+        <div id="tab_score"><script src="scores.js"></script></div>
       </div>
 
       <div id="inventaire">
