--- a/apropos.html
+++ b/apropos.html
@@ -44,12 +44,12 @@
       <div class="contact">
         <article class="letter">
           <div class="side">
-            <h1>Contact us</h1>
-            <p><textarea placeholder="Your message"></textarea></p>
+            <h1>Contactez-nous</h1>
+            <p><textarea placeholder="Votre message"></textarea></p>
           </div>
           <div class="side">
-            <p><input type="text" placeholder="Your name" ></p>
-            <p><input type="email" placeholder="Your email" ></p>
+            <p><input type="text" placeholder="Votre nom" ></p>
+            <p><input type="email" placeholder="Votre adresse mail" ></p>
             <p><button id="sendLetter">Send</button></p>
           </div>
         </article>
