--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <div id="containerStart">
       <form id="login" action="objets.php" method="POST">
-          <label> User: <input type="text" name="pseudo" id="pseudo"></label>
+          <label> User: <input type="text" placeholder="Nom de joueur" name="pseudo" id="pseudo"></label>
           <!-- <button id="bouton" class="start">START!</button> -->
         </form>
       <a class="button" type="button" href="jeu.html">JOUER
