--- a/jeu.html
+++ b/jeu.html
@@ -44,8 +44,10 @@
       <div id="map"></div>
       <div id="carnet">
         <img src="image/carnet.png">
+          <div id="indice">INDICE</div>
         <div id="info">Adresse de george pompidou : bru aoifj ezifegr zgqerguu uufuf i</div>
         <div id="indice">INDICE</div>
+        <button type="button" class='indiceSup'>Indice supplémentaire</button>
       </div>
 
       <div id ="bestScores">
