--- a/jeu.html
+++ b/jeu.html
@@ -45,7 +45,7 @@
       <div id="carnet">
         <img src="image/carnet.png">
           <div id="indice">INDICE</div>
-        <div id="info">Adresse de george pompidou : bru aoifj ezifegr zgqerguu uufuf i</div>
+        <div id="info"></div>
         <div id="indice">INDICE</div>
         <button type="button" class='indiceSup'>Indice supplémentaire</button>
       </div>
@@ -80,7 +80,7 @@
           <input type="tel" id="telephone" placeholder="06 01 02 03 04" pattern="[0-9]{2} [0-9]{2} [0-9]{2} [0-9]{2} [0-9]{2}" required>
           <input id="boutonTel" type="submit" value="Téléphoner">
         </form>
-        <p id="infoTel">BONJOZUGPOUZG ZEUOGN Efizoeng zgn qzgnp uqnepu npzugn pqegegergugiriu zuig uiuzig urg iuregiu irug i</p>
+        <p id="infoTel"></p>
 
 
         <p><button id="fin_appel">OK</button></p>
