--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <div id="containerStart">
       <form id="login" href="jeu.html" action="objets.php" method="POST">
           <label><input type="text" placeholder="Nom de joueur" name="pseudo" id="pseudo"></label>
-          <button id="startButton">JOUER!</button>
+          <!-- <button id="startButton">JOUER!</button> -->
       </form>
-      <!-- <a class="button" type="button" href="jeu.html">JOUER -->
+      <a class="startbutton" type="button" href="jeu.html">JOUER
         <!-- Rest la BDD objets + reset les pseudos avec aucun score d'enregistré (c'est les joueurs qui n'ont pas terminé leur partie) -->
       </a>
       <h2>Parviendrez-vous à mettre en prison notre cher Sarko ?</h2>
