--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
     </header>
 
     <div id="containerStart">
-      <form id="login" href="jeu.html" action="objets.php" method="POST">
+      <form id="login" href="jeu.html" action="jeu.html" method="POST">
           <label><input type="text" placeholder="Nom de joueur" name="pseudo" id="pseudo"></label>
-          <!-- <button id="startButton">JOUER!</button> -->
+          <button id="startButton">JOUER!</button>
       </form>
-      <a class="startbutton" type="button" href="jeu.html">JOUER
+      <!-- <a class="startbutton" type="button" href="jeu.html">JOUER -->
         <!-- Rest la BDD objets + reset les pseudos avec aucun score d'enregistré (c'est les joueurs qui n'ont pas terminé leur partie) -->
       </a>
       <h2>Parviendrez-vous à mettre en prison notre cher Sarko ?</h2>
