--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <div id="containerStart">
       <form id="login" href="jeu.html" action="jeu.html" method="POST">
-          <label><input type="text" placeholder="Nom de joueur" name="pseudo" id="pseudo"></label>
+          <label><input type="text" placeholder="Nom de joueur" username="username" id="pseudo"></label>
           <button id="startButton">JOUER!</button>
       </form>
       <!-- <a class="startbutton" type="button" href="jeu.html">JOUER -->
