--- a/apropos.html
+++ b/apropos.html
@@ -38,20 +38,21 @@
 
     <div id="container">
 
-      Ceci est un jeu qui a été fait dans le cadre d'un projet informatique de l'école ENSG.
+      <p>Ceci est un jeu qui a été fait dans le cadre d'un projet informatique visant à s'initier au web, encadré par des professeurs de l'école ENSG Géomatique.</p>
+      <img src="image/ecole_ensg.png">
 
       <div class="contact">
         <article class="letter">
           <div class="side">
           </div>
           <div class="side">
-            <p><button id="sendLetter">Send</button></p>
+            <p><button id="sendLetter">Envoyer</button></p>
           </div>
         </article>
         <div class="envelope front"></div>
         <div class="envelope back"></div>
       </div>
-      <p class="result-message">Thank you for your message</p>
+      <p class="result-message">Merci pour votre retour !</p>
       </div>
         <!-- <script  src="./script_contact.js"> -->
         <script>
