--- a/jeu.html
+++ b/jeu.html
@@ -46,9 +46,9 @@
       <div id="map"></div>
       <div id="carnet">
         <img src="image/carnet.png">
-        <div id="indice">INDICE</div>
+        <!-- <div id="indice"></div> -->
         <div id="info"></div>
-        <button type="button" class='indiceSup'>Indice supplémentaire</button>
+          <button type="button" id='indiceSup'>Indice supplémentaire</button>
       </div>
 
       <div id ="bestScores">
@@ -85,8 +85,9 @@
       </div>
 
       <div>
-        <audio id="recupObjet"><source src="son/s1.wav" type="audio/mpeg"></audio>
-        <audio id="bar"><source src="son/s1.mp3" type="audio/mpeg"></audio>
+        <audio id="recupObjet"><source src="son/obj.wav" type="audio/mpeg"></audio>
+        <audio id="sonTel"><source src="son/tel.wav" type="audio/mpeg"></audio>
+        <audio id="ecriture"><source src="son/ecriture.wav" type="audio/mpeg"></audio>
       </div>
 
 
