--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="apple-touch-icon" sizes="180x180" href="image/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="image/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="image/favicon/favicon-16x16.png">
-    <link rel="manifest" href="image/favicon/site.webmanifest">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
       integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
@@ -35,13 +34,13 @@
     </header>
 
     <div id="containerStart">
+      <p>Vous êtes un enquêteur privé passionné de politique. Vous travaillez régulièrement avec Médiapart pour l'ampleur des scandals qu'ils révèlent.
+      Monsieur Sarksy ne les apprécie guère d'ailleurs, car il risque gros à cause d'eux. Saurez-vous rassembler les preuves nécessaires à attrapper cette anguille ?</p>
       <form id="login" href="jeu.html" action="jeu.html" method="POST">
           <label><input type="text" placeholder="Nom de joueur" username="username" id="pseudo"></label>
-          <button id="startButton">JOUER!</button>
+          <button id="startButton">JOUER</button>
       </form>
-      <!-- <a class="startbutton" type="button" href="jeu.html">JOUER -->
-        <!-- Rest la BDD objets + reset les pseudos avec aucun score d'enregistré (c'est les joueurs qui n'ont pas terminé leur partie) -->
-      </a>
+      <div id="sarko"><img id="sarko" src="image/favicon/android-chrome-512x512.png"></div>
       <h2>Parviendrez-vous à mettre en prison notre cher Sarko ?</h2>
     </div>
 
