--- a/scores.html
+++ b/scores.html
@@ -7,7 +7,6 @@
     <link rel="apple-touch-icon" sizes="180x180" href="image/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="image/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="image/favicon/favicon-16x16.png">
-    <link rel="manifest" href="image/site.webmanifest">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
       integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
@@ -34,7 +33,9 @@
       <h1> Sarko's Escape Adventure </h1>
     </header>
 
-    <div id="container">
+    <div id="container" class="pscores">
+      <div id="tab_gauche"><img src="image/couronne.png"></div>
+      <div id="tab_droite"><img src="image/couronne.png"></div>
       <div id="tab_score">
       <script src="scores.js"></script>
       </div>
