--- a/solution.html
+++ b/solution.html
@@ -7,7 +7,6 @@
     <link rel="apple-touch-icon" sizes="180x180" href="image/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="image/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="image/favicon/favicon-16x16.png">
-    <link rel="manifest" href="image/site.webmanifest">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
       integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
@@ -18,7 +17,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
 
-  <body>
+  <body class="soluce">
 
     <header>
       <div id="bandeau">
@@ -35,28 +34,89 @@
     </header>
 
     <div id="container">
+      <div id="intro">
+        <p>Sarko's Escape Adventure est un jeu d'aventure se décomposant en huits petits scénario qui retracent chacun une affaire judiciaire dans laquelle Monsieur Sarkozy a été impliqué.</p>
+      </div>
       <div class="scenario">
         <h2>Affaire Bettencourt</h2>
+        <p>
+          <ol>
+            <li>Aller au siège de l’Oréal pour voir Mme Bettencourt. Y récupérer son adresse et du parfum.</li>
+            <li>Aller à la maison de Françoise Bettencourt Meyers (Rue Delabordère, Neuilly-sur-Seine). Y rencontrer son agent de sécurité.</li>
+            <li>Convaincre le vigile de vous divulguer l'adresse en lui donnant un peu de parfum.</li>
+            <li>Rencontrer Mme Bettencourt au restaurant le Fouquet’s et récupérer son témoignage manuscrit.</li>
+          </ol>
+        </p>
       </div>
 
       <div class="scenario">
         <h2>Affaire Bygmalion</h2>
+        <p>
+          <ol>
+            <li>Aller voir Jean François Copé à la Mairie de Meaux, récupérer les preuves et le numéro de téléphone de la ministre de la transition ecologique : Barbara Pompil.</li>
+            <li>La retrouver à l'ENSG, montrer la carte de presse au poste de sécurité pour entrer.</li>
+            <li>Discutez avec Barbara Pompi et récupérez les archives de factures non déclarées.</li>
+            <li>Ramener les preuves à Médiapart pour terminer votre travail et admirer l'augmentation de peine.</li>
+          </ol>
+        </p>
       </div>
 
       <div class="scenario">
         <h2>Affaire Reso-Garantia</h2>
+        <p>
+          <ol>
+            <li>Rendez-vous au siège social de siège social de la société RESO GARANTIA à Leningradskaya Street Priozersky District, Sosnovo Leningrad, 188730</li>
+            <li>Téléphoner au secrétaire de la famille, on apprend qu’ils sont à Alaverdi en Arménie dans leur maison familiale.</li>
+            <li>Aller chercher un rhinocéros dans le parc Kruger en Afrique pour Sergei.</li>
+            <li>Le conduire à Alaverdi en Arménie dans la maison familiale des Sarkisov.</li>
+            <li>Récupérer les preuves et passer demander un mandat de perquisition au commissariat.</li>
+            <li>Aller chercher les dernières preuves au bureau de Claude et Sarkozy avocat.</li>
+            <li>Ramener les preuves à Médiapart pour terminer votre travail.</li>
+          </ol>
+        </p>
       </div>
 
       <div class="scenario">
         <h2>Affaire Karachi</h2>
+        <p>
+          <ol>
+            <li>Demander les infos au service secret pakistanais situé à Islamabad, récupérez les fleurs.</li>
+            <li>Déposer les fleurs sur le lieu de l’attentat du 8 mai 2002.</li>
+            <li>Aller au palait du roi d'Arabie Saoudite, récupérer le numéro du roi aurpès d'un garde.</li>
+            <li>Le retrouver aux Maldives pour récupérer la preuve d'achat d'armements</li>
+            <li>Demander plus d'informations à demander infos à Ziad Takieddine au Liban, à Baakline.</li>
+            <li>Ramener les preuves à Médiapart pour terminer votre travail.</li>
+          </ol>
+        </p>
       </div>
 
       <div class="scenario">
         <h2>Affaire Kazakhgate</h2>
+        <p>
+          <ol>
+            <li>Aller au siège social de Tracfin à Montreuil et y récupérer un papier.</li>
+            <li>Aller au sénat belge pour récupérer la loi sur la transaction pénale votée pour réduire peine des trois proches du président Kazakh.</li>
+            <li>Aller voir Jean-François Etienne des Rosaies en Corèze.</li>
+            <li>Ramener le cheval de Przewalski depuis la Mongolie, puis récupérer les infos de Jean-François.</li>
+            <li>Récupérer le dernier dossier auprès de Claude Guéant près du tribunal dans le 17ème.</li>
+            <li>Ramener les preuves à Médiapart pour terminer votre travail.</li>
+          </ol>
+        </p>
       </div>
 
       <div class="scenario">
         <h2>Affaire Financement Libyen</h2>
+        <p>
+          <ol>
+            <li>Aller voir Kadhafi à Bab al-Azizia, le palais présidentiel Libyen. Mince, Kadhafi est mort parce que, sous Sarkozy, la France l’a tué.</li>
+            <li>Retrouver Choukri Ghanem à Vienne, près du Danube. le 29 avril 2012, lendemain de la publication d’une note par Mediapart, qui évoque que Kadhafi a décidé de débloquer 50 millions d'euros pour la campagne de Nicolas Sarkozy, il est retrouvé mort noyé.</li>
+            <li>Aller voir Béchir Salah à Johannesburg. Mince, justement début 2018, il est visé par une tentative d'assassinat dans cette ville et a reçu six balles dans la poitrine ; d’après ses proches, il s’apprêtait à transmettre à la justice française des informations sur l’affaire des financements libyens. Depuis il serait caché à Dubaï.</li>
+            <li>Aller voir Alexandre Djouhri à Londres. Mince, il est hospitalisé car il a été victime d'une attaque cardiaque, et placé en coma artificiel. Heureusement il s’en sort et donne un papier.</li>
+            <li>Demander la clé du coffre fort de la campagne de 2007 à Claude Guéant.</li>
+            <li>Récupérer les dernières infos au siège social de BNP au 16 boulevard des Italiens 75009.</li>
+            <li>Ramener les preuves à Médiapart pour terminer votre travail.</li>
+          </ol>
+        </p>
       </div>
     </div>
 
