--- a/jeu.html
+++ b/jeu.html
@@ -16,13 +16,10 @@
       crossorigin=""></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-
-
   </head>
   <body>
 
     <header>
-      <!-- <img id="logo" src="image/sea_logo5.png"> -->
       <div id="bandeau">
         <ul id="menu">
           <li><img src="image/sea_logo.png"></li>
@@ -46,7 +43,10 @@
       <div id="map"></div>
       <div id="carnet">
         <img src="image/carnet.png">
-        <div id="info"></div>
+        <div id="info"> </div>
+        <div id="indiceText"></div>
+
+
           <button type="button" id='indiceSup'>Indice supplémentaire</button>
       </div>
 
@@ -97,7 +97,7 @@
     </div>
 
     <footer>
-      <p>Tout droit réservé C</p>
+      <p>Tout droit réservé ori</p>
       <p>Version 1.0</p>
       <p>Dernière Maj : 16/11/2021 </p>
     </footer>
