--- a/solution.html
+++ b/solution.html
@@ -43,7 +43,7 @@
           <ol>  <i></i>
             <li>Aller au siège de l’Oréal (<i>48.8681	2.3233</i>) pour voir Mme Bettencourt. Y récupérer son adresse.</li>
             <li>Aller à la maison de Françoise Bettencourt Meyers (<i>48.8779	2.2541</i>). Y rencontrer son agent de sécurité.</li>
-            <li>Convaincre le vigile de vous divulguer l'adresse en lui donnant un peu de parfum.</li>
+            <li>Convaincre le vigile de vous divulguer l'adresse.</li>
             <li>Rencontrer Mme Bettencourt au restaurant le Fouquet’s (<i>48.8715	2.3012</i>) et récupérer son témoignage manuscrit.</li>
           </ol>
         </p>
@@ -53,9 +53,9 @@
         <h2>Affaire Bygmalion</h2>
         <p>
           <ol>
-            <li>Aller voir Jean François Copé à la Mairie de Meaux, récupérer les preuves et le numéro de téléphone de la ministre de la transition ecologique : Barbara Pompil.</li>
+            <li>Aller voir Jean François Copé à la Mairie de Meaux, récupérer les preuves et le numéro de téléphone de la ministre de la transition ecologique : Barbara Pompili.</li>
             <li>La retrouver à l'ENSG, montrer la carte de presse au poste de sécurité pour entrer.</li>
-            <li>Discutez avec Barbara Pompi et récupérez les archives de factures non déclarées.</li>
+            <li>Discutez avec Barbara Pompili et récupérer les archives de factures non déclarées.</li>
             <li>Ramener les preuves à Médiapart pour terminer votre travail et admirer l'augmentation de peine.</li>
           </ol>
         </p>
@@ -68,9 +68,9 @@
             <li>Rendez-vous au siège social de siège social de la société RESO GARANTIA à Leningradskaya Street Priozersky District, Sosnovo Leningrad, 188730</li>
             <li>Téléphoner au secrétaire de la famille, on apprend qu’ils sont à Alaverdi en Arménie dans leur maison familiale.</li>
             <li>Aller chercher un rhinocéros dans le parc Kruger en Afrique pour Sergei.</li>
-            <li>Le conduire à Alaverdi en Arménie dans la maison familiale des Sarkisov.</li>
-            <li>Récupérer les preuves et passer demander un mandat de perquisition au commissariat.</li>
-            <li>Aller chercher les dernières preuves au bureau de Claude et Sarkozy avocat.</li>
+            <li>Retrouvez-vous à Alaverdi en Arménie dans la maison familiale des Sarkisov.</li>
+            <li>Récupérer les preuves et passer demander un mandat de perquisition au commissariat général du 16ème.</li>
+            <li>Aller chercher les dernières preuves au bureau de Claude et Sarkozy avocat dans le 8ème.</li>
             <li>Ramener les preuves à Médiapart pour terminer votre travail.</li>
           </ol>
         </p>
@@ -81,10 +81,10 @@
         <p>
           <ol>
             <li>Demander les infos au service secret pakistanais situé à Islamabad, récupérez les fleurs.</li>
-            <li>Déposer les fleurs sur le lieu de l’attentat du 8 mai 2002.</li>
-            <li>Aller au palait du roi d'Arabie Saoudite, récupérer le numéro du roi aurpès d'un garde.</li>
+            <li>Déposer les fleurs à Karachi sur le lieu de l’attentat du 8 mai 2002.</li>
+            <li>Aller au palais du roi d'Arabie Saoudite, récupérer le numéro du roi auprès d'un garde.</li>
             <li>Le retrouver aux Maldives pour récupérer la preuve d'achat d'armements</li>
-            <li>Demander plus d'informations à demander infos à Ziad Takieddine au Liban, à Baakline.</li>
+            <li>Demander plus d'informations à Ziad Takieddine au Liban, à Baakline.</li>
             <li>Ramener les preuves à Médiapart pour terminer votre travail.</li>
           </ol>
         </p>
@@ -95,8 +95,8 @@
         <p>
           <ol>
             <li>Aller au siège social de Tracfin à Montreuil et y récupérer un papier.</li>
-            <li>Aller au sénat belge pour récupérer la loi sur la transaction pénale votée pour réduire peine des trois proches du président Kazakh.</li>
-            <li>Aller voir Jean-François Etienne des Rosaies en Corèze.</li>
+            <li>Aller au sénat belge pour récupérer la loi sur la transaction pénale votée pour réduire la peine des trois proches du président Kazakh.</li>
+            <li>Aller voir Jean-François Etienne des Rosaies dans le haras national en Corèze.</li>
             <li>Ramener le cheval de Przewalski depuis la Mongolie, puis récupérer les infos de Jean-François.</li>
             <li>Récupérer le dernier dossier auprès de Claude Guéant près du tribunal dans le 17ème.</li>
             <li>Ramener les preuves à Médiapart pour terminer votre travail.</li>
@@ -108,11 +108,10 @@
         <h2>Affaire Financement Libyen</h2>
         <p>
           <ol>
-            <li>Aller voir Kadhafi à Bab al-Azizia, le palais présidentiel Libyen. Mince, Kadhafi est mort parce que, sous Sarkozy, la France l’a tué.</li>
-            <li>Retrouver Choukri Ghanem à Vienne, près du Danube. le 29 avril 2012, lendemain de la publication d’une note par Mediapart, qui évoque que Kadhafi a décidé de débloquer 50 millions d'euros pour la campagne de Nicolas Sarkozy, il est retrouvé mort noyé.</li>
-            <li>Aller voir Béchir Salah à Johannesburg. Mince, justement début 2018, il est visé par une tentative d'assassinat dans cette ville et a reçu six balles dans la poitrine ; d’après ses proches, il s’apprêtait à transmettre à la justice française des informations sur l’affaire des financements libyens. Depuis il serait caché à Dubaï.</li>
-            <li>Aller voir Alexandre Djouhri à Londres. Mince, il est hospitalisé car il a été victime d'une attaque cardiaque, et placé en coma artificiel. Heureusement il s’en sort et donne un papier.</li>
-            <li>Demander la clé du coffre fort de la campagne de 2007 à Claude Guéant.</li>
+            <li>Aller voir Kadhafi à Bab al-Azizia, le palais présidentiel Libyen. Il est mort.</li>
+            <li>Retrouver Choukri Ghanem à Vienne, près du Danube. Il est mort aussi.</li>
+            <li>Aller voir Béchir Salah à Johannesburg.Il a faillit mourrir suite à un attentat, mais se cache depuis à Dubaï.</li>
+            <li>Aller voir Alexandre Djouhri à Londres. Mince, il est hospitalisé mais nous donne néanmoins un papier.</li>
             <li>Récupérer les dernières infos au siège social de BNP au 16 boulevard des Italiens 75009.</li>
             <li>Ramener les preuves à Médiapart pour terminer votre travail.</li>
           </ol>
