--- a/apropos.html
+++ b/apropos.html
@@ -48,7 +48,7 @@
           <div class="side">
             <h1>Contactez-nous</h1>
             <p>
-              <textarea placeholder="Your message"></textarea>
+              <textarea placeholder="Votre message"></textarea>
             </p>
           </div>
           <div class="side">
@@ -62,7 +62,6 @@
       </div>
       <p class="result-message">Merci pour votre retour !</p>
       </div>
-        <!-- <script  src="./script_contact.js"> -->
         <script>
           function addClass() {document.body.classList.add("sent");}
           sendLetter.addEventListener("click", addClass);
